Some text about DTSAs

--- a/references.bib
+++ b/references.bib
@@ -712,6 +712,19 @@
   OPTaddress =   {Vigo, Spain},
 }
 
+@inproceedings{Dawnson-95,
+ author = {Dawson, S. and Ramakrishnan, C. R. and Ramakrishnan, I. V. and Sagonas, K. and Skiena, S. and Swift, T. and Warren, D. S.},
+ title = {Unification factoring for efficient execution of logic programs},
+ booktitle = {POPL '95: Proceedings of the 22nd ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+ year = {1995},
+ isbn = {0-89791-692-1},
+ pages = {247--258},
+ location = {San Francisco, California, United States},
+ doi = {http://doi.acm.org/10.1145/199448.199509},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
 @InProceedings{Dawson-96,
   author =    {S. Dawson and C. R. Ramakrishnan and D. S. Warren},
   title =     {{Practical Program Analysis Using General Purpose Logic Programming Systems -- A Case Study}},
