--- a/texto.tex
+++ b/texto.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{report}
+\documentclass[11pt]{report}
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
 %\usepackage{citesort} % sorts citation numbers appropriately
@@ -8,6 +8,7 @@
 \usepackage[boxed,linesnumbered]{algorithm2e}
 \usepackage{fix-cm}
 \usepackage{cite}
+\usepackage{enumerate}
 
 \usepackage{setspace}
 \doublespacing
